src/test/06-Errors/error-binary.txt
error-binary.ck:1:3: error: cannot perform '+' on object references
[1] 1 + dac;
      ^
